--- a/views/add_modal.ejs
+++ b/views/add_modal.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="modal" id="modal">
-        <button id="closeModalBtn">Use to close</button>
+        <button id="closeModalBtn">X</button>
         <form action="/submit_add_book_request" method="post">
             <label for="bookTitle">Book Title: </label>
             <input type="text" id="bookTitle" name="bookTitle">
@@ -38,7 +38,7 @@
             <label for="LCCN">LCCN: </label>
             <input type="text" id="LCCN" name="LCCN">
 
-            <button type="submit">Submit</button>
+            <button type="submit" id="submit_add_book">Submit</button>
         </form>
     </div>
 </body>
