--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%=intro.owner_name%>'s Book Vault</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Quattrocento:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <%- include('header.ejs') %>
+    <div class="container">
+        
 
-        <div class="modalpage"><%- include('add_modal.ejs') %></div>
+            <div class="modalpage"><%- include('add_modal.ejs') %></div>
 
-        <div class="mainpage"><%- include('home_page.ejs') %></div>
+            <div class="mainpage"><%- include('home_page.ejs') %></div>
 
+        
+    </div>
     <%- include('footer.ejs') %>
     <script>
         const mainPage = document.querySelector(".mainpage");
@@ -24,8 +31,8 @@
             modalPage.style.display = "block";
             modalPage.style.zIndex = "9999";
 
-            mainPage.style.filter = "blur(5px)";
-            mainPage.style.opacity = "0.5";
+            mainPage.style.filter = "blur(1px)";
+            // mainPage.style.opacity = "0.5";
             mainPage.style.pointerEvents = "none";
         });
 
