--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -1,3 +1,7 @@
+.modalpage{
+    width: 100%;
+}
+
 .modal{
     height: 100vh;
     display: flex;
@@ -11,4 +15,32 @@
     flex-direction: column;
     gap: 12px;
     width: 300px;
+}
+
+#closeModalBtn{
+    background-color: rgb(130, 0, 0);
+    border: none;
+    font-weight: 900;
+    height: 20px;
+    width: 20px;
+    position: fixed;
+    top: 50px;
+    right: 500px;
+}
+
+form input,
+form textarea,
+form select {
+  width: 100%;
+  padding: 5px;
+ border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 15px;
+}
+
+#submit_add_book{
+    border: 1px solid #ccc;
+    background-color: #ccc;
+    color: black;
+    font-weight: 900;
 }
